--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Grace Joy P. Biaras | My Portfolio</title>
-
 <style>
   body {
     font-family: 'Times New Roman', serif;
@@ -228,17 +227,17 @@
 
   <div style="text-align:center; margin-top:20px;">
     <figure>
-      <img src="/FB_IMG_1755346945760.jpg" alt="Tree Planting Activity" width="150" height="150">
+      <img src="FB_IMG_1755346945760.jpg" alt="Tree Planting Activity" width="150" height="150">
       <figcaption>Tree Planting Activity</figcaption>
     </figure>
 
     <figure>
-      <img src="/IMG_20240129_131316.jpg" alt="Trip to Siquijor Island" width="150" height="150">
+      <img src="IMG_20240129_131316.jpg" alt="Trip to Siquijor Island" width="150" height="150">
       <figcaption>Trip to Siquijor Island</figcaption>
     </figure>
 
     <figure>
-      <img src="/IMG_20250618_141005.jpg" alt="My First Medal" width="150" height="150">
+      <img src="IMG_20250618_141005.jpg" alt="My First Medal" width="150" height="150">
       <figcaption>My First Medal in College</figcaption>
     </figure>
   </div>
